# the-logistics-prophet

./: .dockerignore  .env.example  .gitignore  ADSENSE_COT_SPECKIT.ko.md  ARCHIVE.md  CLOUDFLARE_PAGES.md  CONTRIBUTING.md  Dockerfile  LINKEDIN.md  Makefile  README.md  SECURITY.md  SERVICE_GRADE_SPECKIT.ko.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  production-smoke.yml
.streamlit/: config.toml
app/: dashboard.py
app/assets/: cinematic.css
architecture/: blueprint.json
docs/: BIGTECH_ELEVATION_PLAN.md  cloud-ai-architecture.md  datadog_ingestion.md  postmortem_template.md  runbook.md
docs/architecture/: blueprint.json
docs/evidence/: raw-test-output-2026-03-19.txt  test-performance.md
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
monitoring/: datadog_dashboard.json  monitors.yaml
ontology/: competency_questions.md  supply_chain.ttl
scripts/: build_marts.py  build_report.py  build_semantic_layer.py  exercise_runtime_scorecard.py  export_datadog_series.py  generate_data.py  init_service_store.py  manage_users.py  push_datadog.py  recommend_incidents.py  replay_alert_scenario.py  run_data_quality.py  run_pipeline.py  scenario_runner.py  score_daily.py  service_core_snapshot.py  service_core_worklist.py  service_health_audit.py  service_review_surface.py  start_demo_local.sh  sync_service_queue.py  train_model.py  verify_audit.py  workflow_sla_snapshot.py
site/: about.html  analytics.js  compliance.html  contact.html  index.html  privacy.html  robots.txt  sitemap.xml  terms.html
specs/: FLAGSHIP_V3_SPEC.md  PRODUCT_SPEC.md  SPECKIT_EXECUTION_PLAN.md
src/control_tower/: ai_assistant.py  config.py  data_access.py  evidence_pack.py  incident_llm.py  modeling.py  ops_output.py  quality.py  queue_sync.py  scoring.py  screening_agent.py  semantic_layer.py  semantic_queries.py  service_health.py  service_store.py  sqlite_pipeline.py  synthetic_data.py
tests/: test_ai_assistant.py  test_auth_rbac_audit.py  test_frontend_metadata.py  test_incident_llm.py  test_incident_llm_resilience.py  test_model_artifact.py  test_pipeline_lock.py  test_pipeline_smoke.py  test_quality_semantic.py  test_queue_sync.py  test_screening_agent.py  test_semantic_queries.py  test_service_health.py  test_service_store.py  test_synthetic_anchor.py  test_validation_and_logging.py
tools/: cloudflare_pages.config  release_ops.sh
