[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-logistics-prophet"
version = "0.1.0"
description = "Logistics control tower with pipeline automation, service health, review surfaces, and Streamlit operations dashboard."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kim", email = "kim@example.com" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "rdflib>=7.0",
  "streamlit>=1.35",
  "plotly>=5.20",
  "shap>=0.44",
  "requests>=2.31",
  "urllib3<2",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
