[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-logistics-prophet"
version = "0.1.0"
description = "Logistics control tower with pipeline automation, service health, review surfaces, and Streamlit operations dashboard."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Doeon Kim", email = "ehdjs1351@gmail.com"}]
license = "MIT"
keywords = ["logistics", "ml-prediction", "shap", "streamlit", "rdf-ontology"]
dependencies = [
  "joblib>=1.4",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "openai>=1.0",
  "rdflib>=7.0",
  "streamlit>=1.35",
  "plotly>=5.20",
  "shap>=0.44",
  "requests>=2.31",
  "urllib3>=1.26,<3",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"app/dashboard.py" = ["F811"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
# The codebase uses Dict[str, object] extensively for flexible payloads.
# Strict object-level type narrowing is intentionally relaxed.
disable_error_code = ["arg-type", "call-overload", "attr-defined", "index", "misc", "return-value"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
